[#828] Sonar fixes.